@@ -1,2 +1,2 @@
 DIST squashmount-6.3.tar.gz 42040 SHA256 84ddd130691f97ad7b422d8ea507ebdfa61704c8ec0e5e8348b4fa2edda9200e SHA512 f271dbc3ac0234da716aeeb523ee999f0efc0d3829188fad117c9fad5f5dd031e2a12282571ebbaeef2207a53a03572bd00be65169b02925e45ac34ea0e481bb WHIRLPOOL 3a7a63b6422b035f2b46a7e8bded94bb4e76a3125396c4d2e2bc402657b6f8ba086c0a926134695d5761aced55d2ff482aafa7c82980329a2752720cb27d0d7e
-DIST squashmount-8.3.tar.gz 51702 SHA256 5158ac845cb9f52302b6d9c73ef228212fcb5268561e7648303e2f56ec6c8cf7 SHA512 7befa72c97803adc705fef7121fbc5b4f71fa36cc929c5233559072d0f9275c428d76c7de44e32ef8b0dc5526a8cce8ffc8953286d926c15934e35c02bd7d936 WHIRLPOOL ac1c732e2974672d2221d17e8158b28873753f5e67ed23ca4583c0e56864b724505ce71bc32dc33ded319e3a51439cca24463984eacb43582dafc0c01811d609
+DIST squashmount-8.4.tar.gz 51775 SHA256 2ce310035edf5eb39f16c04aa1542b48d0cad1d2d48488684dab54c43745a1e6 SHA512 3f12ad2fcc7892a5cdb1fa7b1afc7d9ea2f4b2c9c19faefd681109990acbe6b15ab67e8a2a51f7b485dfec8b5d45be6507ad2440593412de4a9bc60fa8b63e95 WHIRLPOOL 805dac5ece1b3c00399e66ac34717cfa49ba9931f3f3069e846dc279106a006868d414731c7b6207f968e9c56cb5c0a0412a997ba12974cd9537c3a759529b81
