@@ -13,4 +13,7 @@
 		<bugs-to>mailto:martin@mvath.de</bugs-to>
 		<remote-id type="github">vaeth/squashmount</remote-id>
 	</upstream>
+	<use>
+		<flag name="examples">Install sample config additionally into doc directory</flag>
+	</use>
 </pkgmetadata>
