@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashmount-8.4 (19 Aug 2014)
+
+  19 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Add USE=example
+
 *squashmount-8.3 (19 Aug 2014)
 
   19 Aug 2014; Martin Väth <martin@mvath.de>:
